...
        android:layout_marginStart="@dimen/double_medium_padding"
        android:layout_marginEnd="@dimen/double_medium_padding"
        app:layout_constraintTop_toBottomOf="@+id/text_about_item_introduction"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/text_percentage_about_item_introduction"
        android:layout_width="@dimen/small_width"
        android:layout_height="@dimen/small_width"
        android:text="100%"
        android:visibility="gone"
        android:textColor="@color/white"
        android:gravity="center"
...
