...
        android:layout_height="@dimen/parent_width"
        android:layout_marginTop="@dimen/less_largest_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.santra.sanchita.portfolioapp.ui.custom_views.RoundedImageView
        android:id="@+id/image_item_profile_introduction"
        android:layout_width="@dimen/medium_width_less"
        android:layout_height="@dimen/medium_width"
        android:src="@null"
        android:background="@null"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/double_medium_padding"
...
